Fixed issue with overflowing text in license class for series list. Needs testing on my mac too.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,8 +185,7 @@ tr td:last-child {
 }
 
 .license-class-text {
-	font-weight: bolder;
-	margin-top: 2px;
+	font-weight: bold;
 }
 
 .license-col {
